# lie-detector

./: CMakeLists.txt  README.md
data/: face-detection-retail-0004.xml
include/: results_marker.hpp
src/: CMakeCXXCompilerId.cpp  __int32.cpp  main.cpp  results_marker.cpp  utils.cpp
src/plot/: precomp.hpp
